# The public Rust SDK façade (IR-0301): a curated, documented, stability-tiered
# re-export of the already-shipped `iroh-rooms-core`/`iroh-rooms-net` surface.
# Zero new behavior — see `src/lib.rs` for the stability policy and `spec
# initial-rust-sdk-surface.md` for the design rationale.
[package]
name = "iroh-rooms"
version = "0.1.0-rc.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false            # developer preview; crates.io release is a follow-up (spec OQ3)
description = "Iroh Rooms Rust SDK: a curated, stability-tiered façade over iroh-rooms-core/-net"
# Deliberately does NOT inherit the workspace `rust-version`: the `experimental`
# feature pulls in `iroh-rooms-net` -> the iroh 1.0 stack (rustc >= 1.85),
# mirroring `iroh-rooms-net/Cargo.toml`.

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[features]
# Stable surface only: pure/deterministic protocol authoring + validation +
# membership fold + ticket codec. No IO, no network, no local store.
default = []
# The online runtime tier (spec D3/D4): transport, sync engine, local store,
# blob serve/fetch, live-pipe forwarding. Off by default so a default-features
# consumer cannot even name an experimental type.
experimental = ["dep:iroh-rooms-net", "iroh-rooms-core/sync", "dep:iroh"]
# Diagnostic-only forwarding seam. A consumer must opt in explicitly; the
# normal `experimental` and `full` features keep direct-capable networking.
relay-only-test = ["experimental", "iroh-rooms-net/relay-only-test"]
# Convenience alias for the full surface.
full = ["experimental"]

[dependencies]
# Stable tier: pure protocol only, no `store`/`sync` feature.
iroh-rooms-core = { path = "../iroh-rooms-core" }
# Experimental tier only.
iroh-rooms-net = { path = "../iroh-rooms-net", optional = true }
# Re-exported verbatim from `experimental::{session, blob, pipe_runtime}`
# (issue #87): `EndpointAddr`/`EndpointId`/`SecretKey`/`Endpoint` are the
# transport identities the online `Node` API names. Same-type re-export — this
# pin MUST stay byte-identical to `crates/iroh-rooms-net/Cargo.toml`'s (D6/OQ2:
# the `[workspace.dependencies]` hoist was considered and deferred, so the two
# pins are kept in sync by hand and cross-referenced instead) so Cargo unifies
# to one `iroh` crate and the re-exported types are identical to net's.
# Optional + experimental-gated: a default-features build cannot name it.
iroh = { version = "=1.0.1", optional = true }

[dev-dependencies]
# Async runtime for the online examples' `main()`.
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# CSPRNG room-nonce generation in the offline examples (spec IR-0102 D5). Same
# 0.4 line `iroh-rooms-core` already resolves.
getrandom = "0.4"
# Lowercase-hex rendering of `pipe_id`/blob hashes in the online examples.
# Same 0.4 line `iroh-rooms-core`/`-net` already resolve.
hex = "0.4"
# Ergonomic error context for the online examples' `main() -> Result<()>`.
# Same 1.x line `iroh-rooms-net`/`-cli` already resolve.
anyhow = "1"
# Scratch identity-file directories for the example agent's gated e2e tier.
# Same 3.x line `iroh-rooms-core`/`-net`/`-cli` already resolve.
tempfile = "3"
# Independently re-hash the `--artifact` fixture in the example agent's gated
# e2e tier, to check the published `file.shared.blob_hash` against the actual
# file bytes rather than only against the example's own claimed hash. Same 1.x
# line `iroh-rooms-core`/`-net` already resolve.
blake3 = "1"
# Name `bytes::Bytes` in the experimental-surface signature lock for
# `Node::blob_import_bytes` (issue #84 / IR-0308) — the exact type a façade
# consumer supplies. Same 1.x line `iroh-rooms-net` already resolves.
bytes = "1"
